# modmail

./: .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  amqp.env.example  build.sh  config.example.py  config.py  data.sqlite  docker-compose.yml  format.sh  launcher.py  main.py  premium.js  requirements-dev.txt  requirements.txt  schema.sql  setup.cfg  worker.py
.drone/: docker.yaml  format.yaml  lint.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.woodpecker/: docker.yaml  format.yaml  lint.yaml
classes/: _context.py  _guild.py  _http.py  _invite.py  _message.py  _state.py  abc.py  bot.py  channel.py  converters.py  embed.py  guild.py  http.py  invite.py  member.py  message.py  misc.py  state.py
cogs/: admin.py  communication.py  configuration.py  core.py  direct_message.py  error_handler.py  events.py  general.py  main.py  miscellaneous.py  modmail_channel.py  owner.py  premium.py  snippet.py
docker/: .env.example  docker-compose-local.yml  docker-compose.yml  entrypoint.sh
docker/api/: Dockerfile
docker/bot/: Dockerfile  entrypoint.sh
docker/web/: Dockerfile
examples/: config.example.py  db.env.example  rabbitmq.env.example  twilight-dispatch.env  twilight-dispatch.env.example
migrations/2022-05-01-135059_initialize_db/: down.sql  up.sql
migrations/2023-02-18-192931_add_toggle/: down.sql  up.sql
migrations/2023-02-18-192931_create_status_column/: down.sql  up.sql
migrations/2023-10-29-192931_add_snippet_author/: down.sql  up.sql
migrations/2023-12-11-146783_add_premium_slot/: down.sql  up.sql
migrations/2024-04-29-192931_add_exclude_muted_members/: down.sql  up.sql
migrations/2024-12-09-022054_add_ai_prompt/: down.sql  up.sql
migrations/2024-12-09-060913_alter_loggingplus/: down.sql  up.sql
scripts/: database.sh  format.sh  lint.sh  wait.sh
utils/: checks.py  config.py  converters.py  eval.py  paginator.py  prometheus.py  tools.py
web/: .env.example  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  .remarkrc.js  404.html  Cargo.toml  Makefile  _redirects  go.mod  go.sum  index.html  logs.html  nuxt.config.js  package.json  partners.html  premium.html  rustfmt.toml  stats.html  stylelint.config.js  success.html  welcome.html
web/api/: .env.example  Cargo.toml  rustfmt.toml
web/api/src/: auth.rs  config.rs  constants.rs  main.rs
web/api/src/cache/: commands.rs  mod.rs  models.rs
web/api/src/routes/: errors.rs  index.rs  mod.rs  users.rs
web/assets/scss/: _custom.scss  _variables.scss  styles.scss
web/assets/scss/argon/: _alerts.scss  _avatars.scss  _badge.scss  _buttons.scss  _card.scss  _close.scss  _custom-forms.scss  _dropdown.scss  _footer.scss  _forms.scss  _functions.scss  _global.scss  _icons.scss  _input-group.scss  _list-group.scss  _modal.scss  _nav.scss  _navbar.scss  _popover.scss  _progress.scss  _reboot.scss  _section.scss  _type.scss  _utilities.scss  _variables.scss
web/assets/scss/argon/mixins/: _background-variant.scss  _badge.scss  _buttons.scss  _forms.scss  _icon.scss  _modals.scss  _popover.scss
web/assets/scss/argon/utilities/: _backgrounds.scss  _floating.scss  _helper.scss  _shadows.scss  _spacing.scss  _text.scss  _transform.scss
web/components/: BaseAlert.vue  BaseBadge.vue  BaseButton.vue  BaseDropdown.vue  BaseIcon.vue  BaseInput.vue  BaseNav.vue  BaseSelect.vue  BaseSlider.vue  Card.vue  CardPremium.vue  Heading.vue  Modal.vue  Player.vue  Tab.vue  TabPane.vue  TheFooter.vue  TheHeader.vue  TheSidebar.vue  Track.vue  UpdateBar.vue
web/content/: about.md  commands.md  faq.md  features.md  partners.md  premium.md  privacy.md  terms.md
web/css/: particles.css  styles.css
web/functions/: fetch-logs.go
web/functions/fetch-logs/: main.go
web/js/: logs.js  particles.js  premium.js  scroll.js  welcome.js
web/layouts/: auth.vue  dashboard.vue  default.vue  error.vue  home.vue
web/middleware/: auth.js  guild.js  module.js
web/pages/: about.vue  authorized.vue  callback.vue  commands.vue  faq.vue  github.vue  index.vue  invite.vue  login.vue  logout.vue  logs.vue  partners.vue  premium.vue  privacy.vue  status.vue  success.vue  support.vue  terms.vue  welcome.vue
web/pages/logs/: _id.vue
web/pages/users/: @me.vue
web/plugins/: axios.js  click-outside.js  content.js  error.js  modal.js  toast.js  utils.js
web/src/: auth.rs  config.rs  constants.rs  main.rs
web/src/cache/: mod.rs  models.rs
web/src/routes/: errors.rs  index.rs  logs.rs  mod.rs  users.rs  webhook.rs  webhooks.rs
web/static/: browserconfig.xml  robots.txt  site.webmanifest
web/store/: guild.js  index.js  user.js
