[package]
name = "modmail"
version = "1.0.0"
edition = "2018"

[dependencies]
actix-web = { version = "3.3.3", default-features = false }
chrono = { version = "0.4.22", default-features = false, features = ["serde"] }
dotenv = { version = "0.15.0", default-features = false }
futures = { version = "0.3.25", default-features = false }
http = { version = "0.2.8", default-features = false }
jsonwebtoken = { version = "8.1.1", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
oauth2 = { version = "4.2.3", default-features = false, features = ["reqwest"]}
percent-encoding = { version = "2.2.0", default-features = false }
r2d2 = { version = "0.8.10", default-features = false }
redis = { version = "0.22.1", default-features = false, features = ["tokio-comp"] }
regex = { version = "1.6.0", default-features = false }
reqwest = { version = "0.11.12", default-features = false, features = ["default-tls", "json"] }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.87", default-features = false }
serde_urlencoded = { version = "0.7.1", default-features = false }
tokio = { version = "1.21.2", default-features = false, features = ["rt", "rt-multi-thread"] }
tracing = { version = "0.1.37", default-features = false }
tracing-log = { version = "0.1.3", default-features = false, features = ["env_logger"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["ansi", "fmt"] }
twilight-embed-builder = { version = "0.4.1", default-features = false }
twilight-http = { version = "0.4.2", default-features = false, features = ["rustls-webpki-roots"] }
twilight-model = { version = "0.4.2", default-features = false }
url = { version = "2.3.1", default-features = false }
